--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrap">
       <div class="embed-container">
-        <iframe src="http://player.vimeo.com/video/74356069?title=0&byline=0&portrait=0" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+        <iframe src="http://fast.wistia.net/embed/iframe/7c32ql8q1s" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" width="640" height="360"></iframe>
       </div>
       <div class="em-page">
         <div class="em-topmargin">
