Tweaked landing page layout

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="embed-container">
-        <iframe src="http://fast.wistia.net/embed/iframe/7c32ql8q1s" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" width="640" height="360"></iframe>
+      <div class="embed-margin">
+        <div class="embed-container">
+          <iframe src="http://fast.wistia.net/embed/iframe/0vw5fhu4im" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
+        </div>
       </div>
       <div class="em-page">
         <div class="em-topmargin">
@@ -19,13 +21,6 @@
         <div class="stich-top"></div>
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-lg-offset-3">
-              <div class="em-app">
-                <h4>App by the Academy of Philosophy</h4>
-              </div>
-            </div>
-          </div>
-          <div class="row">
             <div class="col-lg-6 col-lg-offset-3 em-heading">
               <br/>
               <h1>A tool to simplify your life</h1>
@@ -33,14 +28,14 @@
           </div>
           <div class="row">
             <div class="em-ingress col-lg-6 col-lg-offset-3">
-              <h3>Extended mind is an app that organizes everything you
-              are doing, so that you can concentrate in one simple thing at a time. </h3>
+              <h3>Extended mind is an service that organizes everything you
+              are doing, so that you can concentrate on one simple thing at a time. </h3>
             </div>
           </div>
           <div class="row">
             <div class="em-please col-lg-6 col-lg-offset-3 ">
-              <h4>Please signup below, if you wish to download the free
-              iPhone app when the beta version is launched for selected group of early users.</h4>
+              <h4>Please signup below, if you wish to start using the free
+              web app when the beta version is launched to selected group of early users.</h4>
             </div>
             <div class="em-sign col-lg-4 col-lg-offset-4 ">
               <h5>Signup here for beta release.</h5>
