New copy with layout changes

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -22,23 +22,32 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-lg-offset-3 em-heading">
-              <br/>
-              <h1>A tool to simplify your life</h1>
+              <img src="logoname.png"/><br/><br/>
+              <h3>a tool to simplify your life</h3>
             </div>
           </div>
           <div class="row">
             <div class="em-ingress col-lg-6 col-lg-offset-3">
-              <h3>Extended mind is an service that organizes everything you
-              are doing, so that you can concentrate on one simple thing at a time. </h3>
+              <h3>
+              <p>upload your thoughts and tasks into your <b>extended mind</b> so that 
+              you can focus your biological mind fully on what you are doing</p>
+              <p>retrieve all your important information in a matter of seconds</p>              
+              <p>your extended mind is
+              <ul><li>super simple</li>
+              <li>super fast</li>
+              <li>super focused</li>
+              </ul>
+              </p>
+              </h3>
             </div>
           </div>
           <div class="row">
             <div class="em-please col-lg-6 col-lg-offset-3 ">
-              <h4>Please signup below, if you wish to start using the free
-              web app when the beta version is launched to selected group of early users.</h4>
+              <h4>please sign up below to start using the free app when the beta 
+              version is launched to a selected group of early adopters</h4>
             </div>
             <div class="em-sign col-lg-4 col-lg-offset-4 ">
-              <h5>Signup here for beta release.</h5>
+              <h5>sign up for beta now</h5>
             </div>
           </div>
           <div class="row">
