--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/"/>
     <meta name="fragment" content="!" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta charset="utf-8" />
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
@@ -11,7 +11,6 @@
   </head>
   <body>
     <div class="container">
-      <div ng-include src="'static/partials/templates/navigation.html'"></div>
       <div class="row-fluid">
         <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
