Much larger font, two signup boxes

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -9,10 +9,8 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="embed-margin">
-        <div class="embed-container">
-          <iframe src="http://fast.wistia.net/embed/iframe/0vw5fhu4im" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
-        </div>
+      <div class="embed-container">
+        <iframe src="http://fast.wistia.net/embed/iframe/0vw5fhu4im" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
       </div>
       <div class="em-page">
         <div class="em-topmargin">
@@ -22,8 +20,26 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-6 col-lg-offset-3 em-heading">
-              <img src="logoname.png"/><br/><br/>
-              <h3>a tool to simplify your life</h3>
+              <h1>simplify your life</h1>
+            </div>
+          </div>
+          <div class="row">
+            <div class="em-sign col-lg-4 col-lg-offset-4 ">
+              <h5>sign up for beta:</h5>
+            </div>
+            <div class="col-lg-10 col-lg-offset-1 em-email">
+              <form class="form-inline" role="form" id="emailFormUpper">
+                <div class="form-group">
+                  <label class="sr-only" for="email">Email address</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+                </div>
+                <input id="input" type="submit" name="submit" value="OK" class="btn btn-default"/>
+              </form>
+            </div>
+            <div class="row" id="resultUpper">
+              <div class="alert">
+                &nbsp;
+              </div>
             </div>
           </div>
           <div class="row">
@@ -47,7 +63,7 @@
               version is launched to a selected group of early adopters</h4>
             </div>
             <div class="em-sign col-lg-4 col-lg-offset-4 ">
-              <h5>sign up for beta now</h5>
+              <h5>sign up for beta now:</h5>
             </div>
           </div>
           <div class="row">
@@ -67,14 +83,15 @@
             </div>
           </div>
           <div class="row">
-            <div class="em-logo col-lg-4 col-lg-offset-4"><img src="logo.png" height="40"/>
+            <div class="em-logo col-lg-4 col-lg-offset-4">
+              <img src="logoname.png"/>
             </div>
           </div>
         </div>
       </div>
     </div>
     <div class="footer">
-      <a href="http://www.extendedmind.org" target="_blank">extended mind blog</a> | <a href="mailto:info@ext.md">contact</a> | <a href="http://ext.md/press">press</a>
+      <h5><a href="http://www.extendedmind.org" target="_blank">extended mind blog</a> | <a href="mailto:info@ext.md">contact</a> | <a href="http://ext.md/press">press</a></h5>
       <br/>
       <br/>
     </div>
