--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -30,8 +30,8 @@
             <div class="col-lg-10 col-lg-offset-1 em-email">
               <form class="form-inline" role="form" id="emailFormUpper">
                 <div class="form-group">
-                  <label class="sr-only" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+                  <label class="sr-only" for="email">email address</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="enter email"/>
                 </div>
                 <input id="input" type="submit" name="submit" value="OK" class="btn btn-default"/>
               </form>
@@ -49,18 +49,16 @@
               you can focus your biological mind fully on what you are doing</p>
               <p>retrieve all your important information in a matter of seconds</p>              
               <p>your extended mind is
-              <ul><li>super simple</li>
-              <li>super fast</li>
-              <li>super focused</li>
-              </ul>
-              </p>
-              </h3>
+              <ul><li>simple</li>
+              <li>fast</li>
+              <li>focused</li>
+              </ul></p></h3>
             </div>
           </div>
           <div class="row">
             <div class="em-please col-lg-6 col-lg-offset-3 ">
               <h4>please sign up below to start using the free app when the beta 
-              version is launched to a selected group of early adopters</h4>
+              version is launched</h4>
             </div>
             <div class="em-sign col-lg-4 col-lg-offset-4 ">
               <h5>sign up for beta now:</h5>
@@ -70,8 +68,8 @@
             <div class="col-lg-10 col-lg-offset-1 em-email">
               <form class="form-inline" role="form" id="emailForm">
                 <div class="form-group">
-                  <label class="sr-only" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Enter email"/>
+                  <label class="sr-only" for="email">email address</label>
+                  <input type="email" class="form-control" id="email" name="email" placeholder="enter email"/>
                 </div>
                 <input id="input" type="submit" name="submit" value="OK" class="btn btn-default"/>
               </form>
