Changed to squares on list, added a better please description

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -57,8 +57,8 @@
           </div>
           <div class="row">
             <div class="em-please col-lg-6 col-lg-offset-3 ">
-              <h4>please sign up below to start using the free app when the beta 
-              version is launched</h4>
+              <h4>please sign up below and join the exclusive group of early adopters 
+                  who get the free app when the beta version is launched</h4>
             </div>
             <div class="em-sign col-lg-4 col-lg-offset-4 ">
               <h5>sign up for beta now:</h5>
