--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -48,6 +48,7 @@
     <script src="static/js/controllers/navigation.js"></script>
     <script src="static/js/controllers/newTask.js"></script>
     <script src="static/js/controllers/notes.js"></script>
+    <script src="static/js/controllers/noteEdit.js"></script>
     <script src="static/js/controllers/project.js"></script>
     <script src="static/js/controllers/pageNotFound.js"></script>
     <script src="static/js/controllers/tasks.js"></script>
