--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -19,15 +19,15 @@
         <div class="stich-top"></div>
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-lg-offset-3 em-heading">
+            <div class="col-sm-12 em-heading">
               <h1>simplify your life</h1>
             </div>
           </div>
-          <div class="row">
-            <div class="em-sign col-lg-4 col-lg-offset-4 ">
+          <div class="row em-input">
+            <div class="em-sign col-sm-12">
               <h5>sign up for beta:</h5>
             </div>
-            <div class="col-lg-10 col-lg-offset-1 em-email">
+            <div class="col-sm-12 em-email">
               <form class="form-inline" role="form" id="emailFormUpper">
                 <div class="form-group">
                   <label class="sr-only" for="email">email address</label>
@@ -43,7 +43,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="em-ingress col-lg-6 col-lg-offset-3">
+            <div class="em-ingress col-sm-12">
               <h3>
               <p>upload your thoughts and tasks into your <b>extended mind</b> so that
               you can focus your biological mind fully on what you are doing</p>
@@ -56,16 +56,16 @@
             </div>
           </div>
           <div class="row">
-            <div class="em-please col-lg-6 col-lg-offset-3 ">
+            <div class="em-please col-sm-12">
               <h4>please sign up below and join the exclusive group of early adopters
                   who get the free app when the beta version is launched</h4>
             </div>
-            <div class="em-sign col-lg-4 col-lg-offset-4 ">
-              <h5>sign up for beta now:</h5>
-            </div>
           </div>
-          <div class="row">
-            <div class="col-lg-10 col-lg-offset-1 em-email">
+          <div class="row em-input">
+            <div class="col-sm-12 em-email">
+              <div class="em-sign col-sm-12">
+                <h5>sign up for beta now:</h5>
+              </div>
               <form class="form-inline" role="form" id="emailForm">
                 <div class="form-group">
                   <label class="sr-only" for="email">email address</label>
@@ -81,7 +81,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="em-logo col-lg-4 col-lg-offset-4">
+            <div class="em-logo col-sm-4 col-sm-offset-4">
               <img src="logoname.png"/>
             </div>
           </div>
