--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -8,6 +8,7 @@
     <title ng-bind="pageTitle.getTitle()"></title>
 
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css"/>
+    <link href="static/lib/angular-carousel/src/css/angular-carousel.css" rel="stylesheet" type="text/css" />
 
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
@@ -34,6 +35,9 @@
     <script src="static/lib/angularjs/angular.js"></script>
     <script src="static/lib/angularjs/angular-mobile.js"></script>
     <script src="static/lib/angularjs/angular-mocks.js"></script>
+    <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
+    <script src="static/lib/angular-carousel/dist/angular-carousel.js"></script>
+
     <script src="static/lib/base64.js"></script>
 
     <script src="static/js/app.js"></script>
