--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -89,7 +89,10 @@
       </div>
     </div>
     <div class="footer">
-      <h5><a href="http://www.extendedmind.org" target="_blank">extended mind blog</a> | <a href="mailto:info@ext.md">contact</a> | <a href="http://ext.md/press">press</a></h5>
+      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | 
+      	  <a href="https://twitter.com/extmd" target="_blank">twitter</a> | 
+      	  <a href="http://www.extendedmind.org" target="_blank">blog</a> | 
+      	  <a href="mailto:info@ext.md">contact</a></h5>
       <br/>
       <br/>
     </div>
