--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -6,6 +6,7 @@
     <title>extended mind</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="em.css"/>
+    <link rel="shortcut icon" href="favicon.ico"/>
   </head>
   <body>
     <div class="wrap">
