Added beginnings of new layout

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div class="wrap">
-      <div class="embed-container">
-        <iframe src="http://fast.wistia.net/embed/iframe/rsul84tim2" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
+      <div class="em-top">
+  	    <div class="embed-margin">
+          <div class="embed-container">
+            <iframe src="http://fast.wistia.net/embed/iframe/rsul84tim2" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
+          </div>
+        </div>
       </div>
       <div class="em-page">
-        <div class="em-topmargin">
-          &nbsp;
-        </div>
-        <div class="stich-top"></div>
         <div class="container">
           <div class="row">
             <div class="col-sm-12 em-heading">
