Added gray stitching

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -18,7 +18,13 @@
         </div>
       </div>
       <div class="em-page">
-        <div class="container">
+        <div class="em-topmargin">
+          &nbsp;
+        </div>
+        <div class="stich-top"></div>
+        <div class="container">	
+          <div class="em-topmargin"></div>	
+          <div class="stitch-top"></div>	
           <div class="row">
             <div class="col-sm-12 em-heading">
               <h1>simplify your life</h1>
