--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -54,8 +54,13 @@
               <h3>
               <p>upload your thoughts and tasks into your <b>extended mind</b> so that
               you can focus your biological mind fully on what you are doing</p>
-              <p>retrieve all your important information in a matter of seconds</p>
-              <p>your extended mind is
+              retrieve all your important information in a matter of seconds
+              </h3>
+            </div>
+            <div class="em-your"><h3>
+              <h3>your extended mind is</h3>
+            </div>
+            <div class="em-sff"><h3>
               <ul><li>simple</li>
               <li>fast</li>
               <li>focused</li>
