Sticky footer fix

--- a/frontend/core/src/main/webapp/landing/waiting.html
+++ b/frontend/core/src/main/webapp/landing/waiting.html
@@ -28,7 +28,12 @@
       </div>
     </div>
     <div class="footer">
-      <a href="http://www.extendedmind.org" target="_blank">home</a> | <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="mailto:info@ext.md">contact</a> | <a href="http://ext.md/press">press</a>
+      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | 
+      	  <a href="https://twitter.com/extmd" target="_blank">twitter</a> | 
+      	  <a href="http://www.extendedmind.org" target="_blank">blog</a> | 
+      	  <a href="mailto:info@ext.md">contact</a></h5>
+      <br/>
+      <br/>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="em.js"></script>
