--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -51,11 +51,9 @@
               <h3>
               <p>upload your thoughts and tasks into your <b>extended mind</b> so that
               you can focus your biological mind fully on what you are doing</p>
-              retrieve all your important information in a matter of seconds
+              <p>retrieve all your important information in a matter of seconds</p>
+              your extended mind is
               </h3>
-            </div>
-            <div class="em-your"><h3>
-              <h3>your extended mind is</h3>
             </div>
             <div class="em-sff"><h3>
               <ul><li>simple</li>
