--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
+    <link href="static/lib/angular-carousel/dist/angular-carousel.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="static/em.min.css"/>
   </head>
   <body>
@@ -19,7 +20,8 @@
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jquery/jquery.cookie.min.js"></script>
     <script src="static/lib/angularjs/angular.min.js"></script>
-    <script src="static/lib/angularjs/angular-mobile.min.js"></script>
+    <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
+    <script src="static/lib/angular-carousel/dist/angular-carousel.min.js"></script>
     <script src="static/lib/base64.js"></script>
 
     <script src="static/em.min.js"></script>
