--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -20,6 +20,7 @@
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jquery/jquery.cookie.min.js"></script>
     <script src="static/lib/angularjs/angular.min.js"></script>
+    <script src="static/lib/angular-ui/ui-bootstrap-tpls-0.6.0.min.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-carousel.min.js"></script>
     <script src="static/lib/base64.js"></script>
