Fixed email confirmation, landing page ready

--- a/frontend/core/src/main/webapp/landing/waiting.html
+++ b/frontend/core/src/main/webapp/landing/waiting.html
@@ -11,11 +11,6 @@
     <div id="wrap" class="em-waiting">
       <div id="waiting" class="container clear-top">
         <div class="row">
-          <div class="col-sm-12 em-waiting-heading">
-            <img src="logoname.png"/>
-          </div>
-        </div>
-        <div class="row">
           <div class="col-sm-6 col-sm-offset-3">
             <br/>
             <h4>there are currently</h4>
@@ -25,6 +20,11 @@
             <h4>people before you on the extended mind beta waiting list</h4>
           </div>
         </div>
+        <div class="row">
+          <div class="col-sm-12 em-logo-waiting">
+            <img src="logoname.png"/>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer">
@@ -32,8 +32,6 @@
       	  <a href="https://twitter.com/extmd" target="_blank">twitter</a> | 
       	  <a href="http://www.extendedmind.org" target="_blank">blog</a> | 
       	  <a href="mailto:info@ext.md">contact</a></h5>
-      <br/>
-      <br/>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="em.js"></script>
