--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrap">
       <div class="em-top">
-  	    <div class="embed-margin">
+        <div class="embed-margin">
           <div class="embed-container">
             <iframe src="http://fast.wistia.net/embed/iframe/rsul84tim2" allowtransparency="true" frameborder="0" scrolling="no" width="640" height="360" class="wistia_embed" name="wistia_embed"></iframe>
           </div>
@@ -19,9 +19,9 @@
       </div>
       <div class="em-page">
         <div class="stich-top"></div>
-        <div class="container">	
-          <div class="em-topmargin"></div>	
-          <div class="stitch-top"></div>	
+        <div class="container">
+          <div class="em-topmargin"></div>
+          <div class="stitch-top"></div>
           <div class="row">
             <div class="col-sm-12 em-heading">
               <h1>simplify your life</h1>
@@ -49,23 +49,33 @@
           <div class="row">
             <div class="em-ingress col-sm-12">
               <h3>
-              <p>upload your thoughts and tasks into your <b>extended mind</b> so that
-              you can focus your biological mind fully on what you are doing</p>
-              <p>retrieve all your important information in a matter of seconds</p>
-              your extended mind is
-              </h3>
+              <p>
+                upload your thoughts and tasks into your <b>extended mind</b> so that
+                you can focus your biological mind fully on what you are doing
+              </p>
+              <p>
+                retrieve all your important information in a matter of seconds
+              </p> your extended mind is </h3>
             </div>
-            <div class="em-sff"><h3>
-              <ul><li>simple</li>
-              <li>fast</li>
-              <li>focused</li>
+            <div class="em-sff">
+              <h3>
+              <ul>
+                <li>
+                  simple
+                </li>
+                <li>
+                  fast
+                </li>
+                <li>
+                  focused
+                </li>
               </ul></p></h3>
             </div>
           </div>
           <div class="row">
             <div class="em-please col-sm-12">
               <h4>please sign up below and join the exclusive group of early adopters
-                  who get the free app when the beta version is launched</h4>
+              who get the free app when the beta version is launched</h4>
             </div>
           </div>
           <div class="row em-input">
@@ -96,29 +106,47 @@
       </div>
     </div>
     <div class="footer">
-      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | 
-      	  <a href="https://twitter.com/extmd" target="_blank">twitter</a> | 
-      	  <a href="http://www.extendedmind.org" target="_blank">blog</a> | 
-      	  <a href="mailto:info@ext.md">contact</a></h5>
+      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | <a href="https://twitter.com/extmd" target="_blank">twitter</a> | <a href="http://www.extendedmind.org" target="_blank">blog</a> | <a href="mailto:info@ext.md">contact</a></h5>
       <br/>
       <br/>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="em.js"></script>
     <script>
-    $(document).ready(function() {
-      $('#input').click(function(){ return postRequest('emailForm', 'result') });
-      $('#inputLower').click(function(){ return postRequest('emailFormLower', 'resultLower')});
-    });
+		$(document).ready(function() {
+			$('#input').click(function() {
+				return postRequest('emailForm', 'result')
+			});
+			$('#inputLower').click(function() {
+				return postRequest('emailFormLower', 'resultLower')
+			});
+		});
     </script>
     <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		(function(i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r;
+			i[r] = i[r] ||
+			function() {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date();
+			a = s.createElement(o), m = s.getElementsByTagName(o)[0];
+			a.async = 1;
+			a.src = g;
+			m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-44203690-1', 'ext.md');
-  ga('send', 'pageview');
+		ga('create', 'UA-44203690-1', 'ext.md');
+		ga('send', 'pageview');
+    </script>
+    <script type="text/javascript">
+		setTimeout(function() {
+			var a = document.createElement("script");
+			var b = document.getElementsByTagName("script")[0];
+			a.src = document.location.protocol + "//dnn506yrbagrg.cloudfront.net/pages/scripts/0018/3803.js?" + Math.floor(new Date().getTime() / 3600000);
+			a.async = true;
+			a.type = "text/javascript";
+			b.parentNode.insertBefore(a, b)
+		}, 1);
     </script>
   </body>
 </html>
