--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="static/em.min.css"/>
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row-fluid">
         <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
