--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="row-fluid">
 
         <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
