Full width with Twitter Bootstrap 3.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -15,8 +15,8 @@
 
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="row-fluid">
+    <div class="container">
+      <div class="row">
 
         <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
 
