Added ngMobile to remove click delay.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -3,7 +3,8 @@
   <head>
     <base href="/"/>
     <meta name="fragment" content="!" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta charset="utf-8" />
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
@@ -20,6 +21,7 @@
     <script src="static/lib/jquery/jquery.js"></script>
     <script src="static/lib/jquery/jquery.cookie.min.js"></script>
     <script src="static/lib/angularjs/angular.min.js"></script>
+    <script src="static/lib/angularjs/angular-mobile.min.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-carousel.min.js"></script>
     <script src="static/lib/base64.js"></script>
