Removed device height attribute from index meta tag.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -3,7 +3,7 @@
   <head>
     <base href="/"/>
     <meta name="fragment" content="!" />
-    <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta charset="utf-8" />
     <title ng-bind="page.getTitle()"></title>
