Twitter Bootstrap mobile, tablet, desktops layout.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 col-lg-offset-3 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
+        <div class="col-xs-12 col-sm-6 col-md-8 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
       </div>
     </div>
 
