Added async to waiting and added missing semicolon

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -127,11 +127,11 @@
 		$(document).ready(function() {
 			$('#input').click(function() {
 			  _gaq.push(['_trackEvent', 'signup', 'beta', 'upper',, false]);
-				return postRequest('emailForm', 'result')
+				return postRequest('emailForm', 'result');
 			});
 			$('#inputLower').click(function() {
 				_gaq.push(['_trackEvent', 'signup', 'beta', 'lower',, false]);
-				return postRequest('emailFormLower', 'resultLower')
+				return postRequest('emailFormLower', 'resultLower');
 			});
 		});
     </script>
