--- a/frontend/core/src/main/webapp/landing/waiting.html
+++ b/frontend/core/src/main/webapp/landing/waiting.html
@@ -6,6 +6,17 @@
     <title>extended mind | waiting list</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="em.css"/>
+    <script>
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-44203690-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
   </head>
   <body>
     <div id="wrap" class="em-waiting">
@@ -28,9 +39,9 @@
       </div>
     </div>
     <div class="footer">
-      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> | 
-      	  <a href="https://twitter.com/extmd" target="_blank">twitter</a> | 
-      	  <a href="http://www.extendedmind.org" target="_blank">blog</a> | 
+      <h5><a href="https://www.facebook.com/extmd" target="_blank">facebook</a> |
+      	  <a href="https://twitter.com/extmd" target="_blank">twitter</a> |
+      	  <a href="http://www.extendedmind.org" target="_blank">blog</a> |
       	  <a href="mailto:info@ext.md">contact</a></h5>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -39,15 +50,6 @@
     $(document).ready(function() {
       setQueueNumber(QueryString.uuid);
     });
-    </script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-44203690-1', 'ext.md');
-  ga('send', 'pageview');
     </script>
   </body>
 </html>
