--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -51,7 +51,9 @@
     <script src="static/js/controllers/home.js"></script>
     <script src="static/js/controllers/login.js"></script>
     <script src="static/js/controllers/my.js"></script>
+    <script src="static/js/controllers/myNotes.js"></script>
     <script src="static/js/controllers/myPages.js"></script>
+    <script src="static/js/controllers/myTasks.js"></script>
     <script src="static/js/controllers/navigation.js"></script>
     <script src="static/js/controllers/newTask.js"></script>
     <script src="static/js/controllers/notes.js"></script>
