Added Twitter Bootstrap JavaScript.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -39,6 +39,8 @@
     <script src="static/lib/angularjs/angular-mocks.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-carousel.js"></script>
+    
+    <script src="static/lib/bootstrap/bootstrap.js"></script>
 
     <script src="static/lib/base64.js"></script>
 
