--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -25,6 +25,9 @@
     <script src="static/lib/angularjs/angular-mobile.min.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-carousel.js"></script>
+
+    <script src="static/lib/bootstrap/bootstrap.min.js"></script>
+
     <script src="static/lib/base64.js"></script>
 
     <script src="static/em.min.js"></script>
