--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-xs-12 col-sm-6 col-md-8 em-page em-animate" ng-view ng-animate="{{pageAnimation}}"></div>
+        <div class="col-xs-12 col-sm-6 col-md-8 em-page" ng-view></div>
 
       </div>
     </div>
