--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -28,6 +28,8 @@
     <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-carousel.js"></script>
 
+    <script src="static/lib/angular-ui/ui-bootstrap-0.6.0.min.js"></script>
+
     <script src="static/lib/base64.js"></script>
 
     <script src="static/em.min.js"></script>
