--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -41,6 +41,8 @@
     <script src="static/lib/angularjs/angular-mocks.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
     <script src="static/lib/angular-carousel/dist/angular-carousel.js"></script>
+    
+    <script src="static/lib/angular-ui/ui-bootstrap-0.6.0.js"></script>
 
     <script src="static/lib/base64.js"></script>
 
