--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -11,6 +11,12 @@
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
     <link href="static/lib/angular-carousel/dist/angular-carousel.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="static/em.min.css"/>
+    <script type='application/javascript' src="static/lib/fastclick/fastclick.js"></script>
+    <script type="application/javascript">
+      window.addEventListener('load', function() {
+        FastClick.attach(document.body);
+      }, false);
+    </script>
   </head>
   <body>
     <div class="container">
