Refactored task list template into tasks folder.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -76,6 +76,7 @@
     <script src="static/js/directives/emDirectives.js"></script>
     <script src="static/js/directives/items.js"></script>
     <script src="static/js/directives/items/items.js"></script>
+    <script src="static/js/directives/tasks/tasks.js"></script>
 
     <script src="static/js/filters/emFilters.js"></script>
 
