Status bar style. Note refactoring.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent">
     <title ng-bind="pageTitle.getTitle()"></title>
 
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css"/>
@@ -68,7 +68,7 @@
     <script src="static/js/controllers/noteEdit.js"></script>
     <script src="static/js/controllers/project.js"></script>
     <script src="static/js/controllers/pageNotFound.js"></script>
-    
+
     <script src="static/js/controllers/my/notes.js"></script>
     <script src="static/js/controllers/my/tasks.js"></script>
 
