Moving forked angular-carousel from lib into project.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -68,6 +68,7 @@
     <script src="static/js/controllers/my/notes.js"></script>
     <script src="static/js/controllers/my/tasks.js"></script>
 
+    <script src="static/js/directives/carousel.js"></script>
     <script src="static/js/directives/emDirectives.js"></script>
     <script src="static/js/directives/items.js"></script>
     <script src="static/js/directives/notes.js"></script>
