--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -10,8 +10,8 @@
     <title ng-bind="pageTitle.getTitle()"></title>
 
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.css"/>
-    <link href="static/lib/angular-carousel/src/css/angular-carousel.css" rel="stylesheet" type="text/css" />
 
+    <link rel="stylesheet/less" href="static/less/carousel.less"/>
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
 
@@ -46,7 +46,6 @@
     <script src="static/lib/angularjs/angular-animate.js"></script>
     <script src="static/lib/angularjs/angular-touch.js"></script>
     <script src="static/lib/angularjs/angular-mocks.js"></script>
-    <script src="static/lib/angular-carousel/dist/angular-mobile.js"></script>
 
     <script src="static/lib/base64.js"></script>
 
