Removed fastclick folder.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -10,7 +10,7 @@
     <title ng-bind="page.getTitle()"></title>
     <link rel="stylesheet" href="static/lib/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="static/em.min.css"/>
-    <script type='application/javascript' src="static/lib/fastclick/fastclick.js"></script>
+    <script type='application/javascript' src="static/lib/fastclick.js"></script>
     <script type="application/javascript">
       window.addEventListener('load', function() {
         FastClick.attach(document.body);
