--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet/less" href="static/less/em.less"/>
     <script src="static/lib/less/less-min.js"></script>
 
-    <script type='application/javascript' src="static/lib/fastclick/fastclick.js"></script>
+    <script type='application/javascript' src="static/lib/fastclick.js"></script>
     <script type="application/javascript">
       window.addEventListener('load', function() {
         FastClick.attach(document.body);
