--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -66,6 +66,8 @@
     <script src="static/js/controllers/my/tasks.js"></script>
 
     <script src="static/js/controllers/notes/newNote.js"></script>
+    
+    <script src="static/js/controllers/tasks/edit.js"></script>
     <script src="static/js/controllers/tasks/newTask.js"></script>
 
     <script src="static/js/directives/carousel.js"></script>
