Omni bar directive and controller.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -57,6 +57,7 @@
     <script src="static/js/controllers/home.js"></script>
     <script src="static/js/controllers/login.js"></script>
     <script src="static/js/controllers/my.js"></script>
+    <script src="static/js/controllers/omniBar.js"></script>
     <script src="static/js/controllers/pageNotFound.js"></script>
 
     <script src="static/js/controllers/my/notes.js"></script>
