--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -55,6 +55,7 @@
     <script src="test/mockHelpers.js"></script>
 
     <script src="static/js/controllers/home.js"></script>
+    <script src="static/js/controllers/items.js"></script>
     <script src="static/js/controllers/login.js"></script>
     <script src="static/js/controllers/my.js"></script>
     <script src="static/js/controllers/omniBar.js"></script>
