--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -58,6 +58,7 @@
     <script src="static/js/controllers/items.js"></script>
     <script src="static/js/controllers/login.js"></script>
     <script src="static/js/controllers/my.js"></script>
+    <script src="static/js/controllers/navbar.js"></script>
     <script src="static/js/controllers/notes.js"></script>
     <script src="static/js/controllers/omniBar.js"></script>
     <script src="static/js/controllers/pageNotFound.js"></script>
