--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -54,6 +54,7 @@
     <script src="test/e2e/devApp.js"></script>
     <script src="test/mockHelpers.js"></script>
 
+    <script src="static/js/controllers/account.js"></script>
     <script src="static/js/controllers/home.js"></script>
     <script src="static/js/controllers/items.js"></script>
     <script src="static/js/controllers/login.js"></script>
