--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent">
     <title ng-bind="pageTitle.getTitle()"></title>
 
-		<link rel="stylesheet/less" href="static/less/em-bootstrap.less" />
+		<link rel="stylesheet/less" href="test/em-bootstrap.less" />
 
 		<link rel="stylesheet/less" href="static/less/carousel.less"/>
     <link rel="stylesheet/less" href="static/less/em.less"/>
