--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -8,10 +8,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent">
     <title ng-bind="pageTitle.getTitle()"></title>
 
-    <link rel="stylesheet/less" href="test/em-bootstrap.less" />
+    <link rel="stylesheet/less" href="static/less/em-bootstrap.less" />
     <link rel="stylesheet/less" href="static/less/carousel.less"/>
     <link rel="stylesheet/less" href="static/less/em.less"/>
-    
+
     <script src="static/lib/less/less-min.js"></script>
     <script type='application/javascript' src="static/lib/fastclick.js"></script>
     <script type="application/javascript">
