Set max-width for >mobile display sizes

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -25,7 +25,7 @@
     <div class="container">
       <div class="row">
 
-        <div class="col-xs-12 col-sm-6 col-md-8 em-page" ng-view></div>
+        <div class="em-page" ng-view></div>
 
       </div>
     </div>
