--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -22,12 +22,8 @@
   </head>
   <body>
 
-    <div class="container">
-      <div class="row">
-
-        <div class="em-page" ng-view></div>
-
-      </div>
+    <div class="container em-page">
+      <div ng-view />
     </div>
 
     <script src="static/lib/jquery/jquery.js"></script>
