Index.html update.

--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -17,10 +17,9 @@
     </script>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-8 em-page" ng-view></div>
-      </div>
+
+    <div class="container em-page">
+        <div ng-view></div>
     </div>
 
     <script src="static/lib/jquery/jquery.js"></script>
