--- a/frontend/core/src/main/webapp/index.html
+++ b/frontend/core/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-transcluent">
     <title ng-bind="page.getTitle()"></title>
-    <link rel="stylesheet" href="static/css/em.min.css"/>
+    <link rel="stylesheet" href="static/css/em.css"/>
   </head>
   <body>
 
